--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
 <body>
     <header class="header" id="header">
         <div class="header__wraper">
-            <div class="logo">Magic BEE</div>
+            <div class="logo">
+                <img src="https://drive.google.com/uc?export=view&id=1RQ7PucLwsRnyTbfe4XLNz0gHzTVX_50_" alt="bee">
+            </div>
+
             <div class="nav-bar" id="nav-bar">
                 <div class="nav-mobile">
                     <span></span>
