--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                             alt="honey1">
                     </div>
                     <div class="product-details">
-                        <span class="product-catagory">Craf Honey</span>
+                        <span class="product-catagory">CRAFT Honey</span>
                         <h4><a href="">Edelvaise honey</a></h4>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero, possimus nostrum!</p>
                         <div class="product-bottom-details">
@@ -134,7 +134,7 @@
 
 
                     <div class="product-details">
-                        <span class="product-catagory">Craf Honey</span>
+                        <span class="product-catagory">CRAFT Honey</span>
                         <h4><a href="">Edelvaise honey</a></h4>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero, possimus nostrum!</p>
                         <div class="product-bottom-details">
@@ -154,7 +154,7 @@
                             alt="honey1">
                     </div>
                     <div class="product-details">
-                        <span class="product-catagory">Craf Honey</span>
+                        <span class="product-catagory">CRAFT Honey</span>
                         <h4><a href="">Edelvaise honey</a></h4>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero, possimus nostrum!</p>
                         <div class="product-bottom-details">
